[gd_scene load_steps=8 format=3 uid="uid://b54uo5otbvimt"]

[ext_resource type="Script" uid="uid://1xgxtcrnhjnk" path="res://scenes/user_interface/module/module.gd" id="1_raokp"]
[ext_resource type="Texture2D" uid="uid://cj0iuo6vlnbsd" path="res://assets/module_icons/emptyslot.png" id="2_7vxq3"]
[ext_resource type="Texture2D" uid="uid://b8yq1ryeyw6xj" path="res://assets/module_icons/basic_background.png" id="2_na2qk"]
[ext_resource type="Texture2D" uid="uid://c4rw7ixga2j3q" path="res://assets/module_icons/active_min_power.png" id="4_i6xls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6xls"]

[sub_resource type="SystemFont" id="SystemFont_i6xls"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_i6xls"]
font_size = 12
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Module" type="Control"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 160.0
size_flags_vertical = 3
script = ExtResource("1_raokp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6xls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 128.0
theme_override_constants/separation = 32

[node name="IncreasePowerContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="IncreasePower" type="Button" parent="VBoxContainer/IncreasePowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_i6xls")
theme_override_font_sizes/font_size = 16

[node name="IncreasePowerLabel" type="Label" parent="VBoxContainer/IncreasePowerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Q"

[node name="DecreasePowerContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="DecreasePower" type="Button" parent="VBoxContainer/DecreasePowerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 10

[node name="DecreasePowerLabel" type="Label" parent="VBoxContainer/DecreasePowerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "A"

[node name="ModuleContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModuleBackground" type="TextureRect" parent="ModuleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
texture = ExtResource("2_na2qk")

[node name="ModuleSprite" type="TextureRect" parent="ModuleContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_7vxq3")

[node name="EnergyControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnergyContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -32.0
offset_right = -20.666992
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(56, 16)

[node name="MinPower" type="TextureRect" parent="EnergyContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_i6xls")
expand_mode = 1
stretch_mode = 1

[node name="UpgradeContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 96)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = 32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = -4
alignment = 2

[node name="MaxLevelLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0.7882353, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
text = "MAX!"
label_settings = SubResource("LabelSettings_i6xls")
vertical_alignment = 2
